fix margin-top services section mobile screens

--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -110,6 +110,6 @@
     }
 
     @media (max-width: 400px) {
-        margin-top: -64px;
+        margin-top: -40px;
     }
 }
